--- a/pages/futbol.html
+++ b/pages/futbol.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-
 <body>
 
     <header class="header">
@@ -28,7 +27,8 @@
     <main>
         <section id="menu-futbol">
             <h1>Futbol - Club Atletico Baradero</h1>
-            <img class="cancha-de-futbol" src="/img/cancha-de-futbol.JPG" alt="imagen del estadio carlos asali">
+            <img class="cancha-de-futbol" src="/img/escudo-del-club.jpg"
+                alt="imagen del escudo del club atletico baradero">
             <nav>
                 <button><a href="#futbol-masculino">futbol masculino</a></button>
                 <button><a href="#futbol-femenino">futbol femenino</a></button>
@@ -101,7 +101,7 @@
         </section>
     </main>
 
-    
+
     <footer>
         <section id="footer">
             <h4>
@@ -113,12 +113,5 @@
                     href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
         </section>
     </footer>
-
 </body>
-
-
-
-
-
-
 </html>
