--- a/pages/patinaje.html
+++ b/pages/patinaje.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>patinaje</title>
+    <title>Patinaje - Club Atletico Baradero</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -18,6 +18,7 @@
             <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
             <button><a class="boton-voley" href="voley.html">voley</a></button>
             <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="galeria.html">galeria</a></button>
         </nav>
     </header>
 
