--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button><a class="boton-basquet" href="pages/basquet.html">basquet</a></button>
             <button><a class="boton-voley" href="pages/voley.html">voley</a></button>
             <button><a class="boton-patinaje" href="pages/patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="pages/galeria.html">galeria</a></button>
         </nav>
     </header>
 
