--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Club Atletico Baradero</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 
@@ -13,14 +13,14 @@
     <!--encabezado-->
     <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <img class="escudo" src="img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <img class="escudo" src="./img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
-            <button><a class="boton-inicio" href="index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="pages/futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="pages/basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="pages/voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="pages/patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="pages/galeria.html">galeria</a></button>
+            <button><a class="boton-inicio" href="./index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="./pages/futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="./pages/basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="./pages/voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="./pages/patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="./pages/galeria.html">galeria</a></button>
         </nav>
     </header>
 
@@ -63,7 +63,7 @@
                 iste saepe ex
             </p>
 
-            <img class="sede-del-club" src="img/sede-del-club.jpg" alt="imagen de la sede del club atletico baradero">
+            <img class="sede-del-club" src="./img/sede-del-club.jpg" alt="imagen de la sede del club atletico baradero">
             
             <p class="historia-del-club-segunda-parte">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Reiciendis eum eligendi rerum sit explicabo
