--- a/pages/basquet.html
+++ b/pages/basquet.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basquet - Club Atletico Baradero</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
     <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
             <button><a class="boton-inicio" href="/index.html">inicio</a></button>
             <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
