--- a/pages/voley.html
+++ b/pages/voley.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voley - Club Atletico Baradero</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
     <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
-            <button><a class="boton-inicio" href="/index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="galeria.html">galeria</a></button>
+            <button><a class="boton-inicio" href="../index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="./futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="./basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="./voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="./patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="./galeria.html">galeria</a></button>
         </nav>
     </header>
 
@@ -27,7 +27,7 @@
 
         <section id="menu-voley">
             <h1>Voley - Club Atletico Baradero</h1>
-            <img class="logo-voley" src="/img/logo-voley.jpg" alt="logo de voley del club atletico baradero">
+            <img class="logo-voley" src="../img/logo-voley.jpg" alt="logo de voley del club atletico baradero">
             <nav>
                 <button><a href="#voley-masculino">voley masculino</a></button>
                 <button><a href="#voley-femenino">voley femenino</a></button>
