--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria - Club Atletico Baradero</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -13,14 +13,14 @@
 <body>
     <header class="header-galeria">
         <h1 class="titulo-galeria"> <strong>Club Atletico Baradero</strong></h1>
-        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones-galeria">
-            <button><a class="boton-inicio" href="/index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="galeria.html">galeria</a></button>
+            <button><a class="boton-inicio" href="../index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="./futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="./basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="./voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="./patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="./galeria.html">galeria</a></button>
         </nav>
     </header>
     <main>
@@ -36,21 +36,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/plantel-futbol-masculino.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-futbol-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-futbol-femenino.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-futbol-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-futbol-reserva.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-futbol-reserva.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
@@ -83,21 +83,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/plantel-basquet-masculino.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-basquet-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-basquet-femenino.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-basquet-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-basquet-infantil.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-basquet-infantil.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
@@ -129,21 +129,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/plantel-voley.JPG" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-voley.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-voley-femenino.JPG" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-voley-femenino.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/plantel-voley-maxi.JPG" class="d-block w-100" alt="...">
+                        <img src="../img/plantel-voley-maxi.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
