--- a/pages/patinaje.html
+++ b/pages/patinaje.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patinaje - Club Atletico Baradero</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header class="header">
         <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
         <nav class="botones">
-            <button><a class="boton-inicio" href="/index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="galeria.html">galeria</a></button>
+            <button><a class="boton-inicio" href="../index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="./futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="./basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="./voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="./patinaje.html">patinaje</a></button>
+            <button><a class="boton-galeria" href="./galeria.html">galeria</a></button>
         </nav>
     </header>
 
@@ -28,7 +28,7 @@
 
         <section id="menu-patinaje">
             <h1>Patinaje - Club Atletico Baradero</h1>
-            <img class="logo-patinaje" src="/img/logo-patinaje.jpg" alt="logo de patinaje del cluhb atletico baradero">
+            <img class="logo-patinaje" src="../img/logo-patinaje.jpg" alt="logo de patinaje del cluhb atletico baradero">
             <nav>
                 <button><a href="#patinaje-masculino">patinaje masculino</a></button>
                 <button><a href="#patinaje-femenino">patinaje femenino</a></button>
