--- a/pages/basquet.html
+++ b/pages/basquet.html
@@ -27,7 +27,7 @@
 
         <section id="menu-basquet">
             <h1>Basquet - Club Atletico Baradero</h1>
-            <img class="logo-basquet" src="/img/logo-basquet.jpg" alt="logo del basquet del club atletico baradero">
+            <img class="logo-basquet" src="../img/logo-basquet.jpg" alt="logo del basquet del club atletico baradero">
             <nav>
                 <button><a href="#basquet-masculino">basquet masculino</a></button>
                 <button><a href="#basquet-femenino">basquet femenino</a></button>
