--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -38,22 +38,22 @@
                     <div class="carousel-item active">
                         <img src="../img/plantel-futbol-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3>Futbol Masculino</h5>
+                            <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-futbol-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h4>Futbol Femenino</h5>
+                            <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-futbol-reserva.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h5>Futbol Inferiores</h5>
+                            <p>Plantel de la sub 21 del Club Atletico Baradero</p>
                         </div>
                     </div>
                 </div>
@@ -85,22 +85,22 @@
                     <div class="carousel-item active">
                         <img src="../img/plantel-basquet-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3>Basquet Masculino</h5>
+                            <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-basquet-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h4>Basquet Femenino</h5>
+                            <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-basquet-infantil.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h5>Basquet Infantil</h5>
+                            <p>Uno de los planteles del basquet infantil del Club Atletico Baradero</p>
                         </div>
                     </div>
                 </div>
@@ -131,22 +131,22 @@
                     <div class="carousel-item active">
                         <img src="../img/plantel-voley.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3>Voley</h5>
+                            <p>Plantel masculino y femenino del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-voley-femenino.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h4>Voley Femenino</h5>
+                            <p>Plantel de voley sub-15 femenino del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-voley-maxi.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h5>Maxi Voley</h5>
+                            <p>Plantel de maxi voley del Club Atletico Baradero</p>
                         </div>
                     </div>
                 </div>
