--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Club Atletico Baradero</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
     <!--encabezado-->
-    <header class="header">
-        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
+    <header>
         <img class="escudo" src="./img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
         <nav class="botones">
-            <button><a class="boton-inicio" href="./index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="./pages/futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="./pages/basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="./pages/voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="./pages/patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="./pages/galeria.html">galeria</a></button>
+            <a href="./index.html">inicio</a>
+            <a href="./pages/historia.html">historia</a>
+            <a href="./pages/deportes.html">deportes</a>
+            <a href="./pages/galeria.html">galeria</a>
+            <a href="./pages/contacto.html">contacto</a>
         </nav>
     </header>
 
@@ -28,57 +30,22 @@
     <!-- contenido-->
 
     <main>
-        <h2>Historia</h2>
-        <section id="historia">
-
-            <p class="historia-del-club">El Club Atlético Baradero es una entidad deportiva argentina con sede la ciudad
-                de Baradero, provincia de
-                Buenos
-                Aires. Fue fundado el 3 de abril de 1905 con la finalidad de practicar fútbol
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet molestias reiciendis fugit sequi dolores
-                debitis maiores, odio nam animi? Repellat error ratione illo accusamus et distinctio facere asperiores
-                praesentium eum.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit
-                explicabo deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione
-                iste saepe ex
-            </p>
-
-            <img class="sede-del-club" src="./img/sede-del-club.jpg" alt="imagen de la sede del club atletico baradero">
-            
-            <p class="historia-del-club-segunda-parte">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
-                deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
-                vitae.</p>
+    
+        <section>
+            <img class="imagen-pagina-principal" src="./img/plantel-futbol-masculino.jpg"
+                alt="plantel-de-primera-division-del-club-atletico-baradero">
+                <p class="pagina-principal">El Club Atlético Baradero es una entidad deportiva argentina con sede la ciudad de Baradero,
+                    provincia de
+                    Buenos Aires. Fue fundado el 3 de abril de 1905 con la finalidad de practicar fútbol en forma
+                    organizada.
+                    Sus fundadores fueron jóvenes que se mancomunaron para llevar a la realidad un sueño que tejieron en
+                    un
+                    banco de la Plaza Mitre en Baradero.</p>
         </section>
 
         <section id="ubicacion">
             <h3>¿donde encontrarnos?</h3>
+            <img src="./img/sede-del-club.jpg" alt="">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6630.505391117299!2d-59.50751835452877!3d-33.80579140608033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ba37b268f26179%3A0x50f55f7121baf2ef!2sClub%20Atl%C3%A9tico%20Baradero%20-%20Estadio%20Carlos%20Asali!5e0!3m2!1ses-419!2sar!4v1712611622332!5m2!1ses-419!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -96,15 +63,13 @@
 
     <!--pie de pagina-->
     <footer>
-        <section id="footer">
-            <h4>
+            <h3>
                 Seguinos en
-            </h4>
+            </h3>
             <button><a class="boton-de-instagram"
                     href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
             <button><a class="boton-de-facebook"
                     href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
-        </section>
     </footer>
 
 
