--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria - Club Atletico Baradero</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="header-galeria">
-        <h1 class="titulo-galeria"> <strong>Club Atletico Baradero</strong></h1>
+    <header>
         <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
-        <nav class="botones-galeria">
-            <button><a class="boton-inicio" href="../index.html">inicio</a></button>
-            <button><a class="boton-futbol" href="./futbol.html">futbol</a></button>
-            <button><a class="boton-basquet" href="./basquet.html">basquet</a></button>
-            <button><a class="boton-voley" href="./voley.html">voley</a></button>
-            <button><a class="boton-patinaje" href="./patinaje.html">patinaje</a></button>
-            <button><a class="boton-galeria" href="./galeria.html">galeria</a></button>
+        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
+        <nav class="botones">
+            <a href="../index.html">inicio</a>
+            <a href="./historia.html">historia</a>
+            <a href="./deportes.html">deportes</a>
+            <a href="./galeria.html">galeria</a>
+            <a href="./contacto.html">contacto</a>
         </nav>
     </header>
     <main>
@@ -39,14 +41,14 @@
                         <img src="../img/plantel-futbol-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Futbol Masculino</h5>
-                            <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
+                                <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-futbol-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h4>Futbol Femenino</h5>
-                            <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
+                                <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -86,14 +88,14 @@
                         <img src="../img/plantel-basquet-masculino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Basquet Masculino</h5>
-                            <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
+                                <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-basquet-femenino.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h4>Basquet Femenino</h5>
-                            <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
+                                <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -132,14 +134,14 @@
                         <img src="../img/plantel-voley.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Voley</h5>
-                            <p>Plantel masculino y femenino del Club Atletico Baradero</p>
+                                <p>Plantel masculino y femenino del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../img/plantel-voley-femenino.JPG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h4>Voley Femenino</h5>
-                            <p>Plantel de voley sub-15 femenino del Club Atletico Baradero</p>
+                                <p>Plantel de voley sub-15 femenino del Club Atletico Baradero</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -165,6 +167,15 @@
 
 
     </main>
+    <footer>
+            <h3>
+                Seguinos en
+            </h3>
+            <button><a class="boton-de-instagram"
+                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
+            <button><a class="boton-de-facebook"
+                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
